# rust-librxe

./: .gitmodules
kmod/: Makefile  urxe.c  urxe.h  urxe_hw_counters.c  urxe_hw_counters.h  urxe_loc.h  urxe_net.c  urxe_net.h  urxe_param.h  urxe_verbs.c  urxe_verbs.h
librxe/: Cargo.toml  gid.txt
librxe-sys/: Cargo.toml  build.rs
librxe-sys/src/: lib.rs  queue.rs  rxe_bindings.h  rxe_param.h  types.rs
librxe-sys/tests/: type_layout_test.rs
librxe/src/: lib.rs  rxe_av.rs  rxe_comp.rs  rxe_context.rs  rxe_cq.rs  rxe_hdr.rs  rxe_mr.rs  rxe_net.rs  rxe_opcode.rs  rxe_pd.rs  rxe_qp.rs  rxe_recv.rs  rxe_req.rs  rxe_resp.rs  rxe_verbs.rs
librxe/tests/: librxe_test.rs
