[package]
name = "librxe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librxe-sys = { path = "../librxe-sys" }
rdma-sys = {path="../../rdma-sys"}
nix = "0.24.1"
libc = "0.2.126"
likely_stable = "0.1.2"
bytes = "1.2.0"

[dev-dependencies]
ibverbs=  { path = "../../rust-ibverbs/ibverbs" }