[package]
name = "librxe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librxe-sys = { path = "../librxe-sys" }
rdma-sys = {path="../../rdma-sys"}
nix = "0.24.1"
libc = "0.2.126"
likely_stable = "0.1.2"
bytes = "1.2.0"
etherparse = "0.12.0"
tracing = "0.1"
tracing-subscriber = "0.2"
crc32fast = "1.3.2"
async-rdma ={ path = "../../async-rdma" }
fxhash = "0.2.1"
spin = "0.9.4"
derivative = "2.2.0"
socket2 = "0.4.4"
rand = "0.8.5"
num_enum = "0.5.7"
smoltcp=  "0.8.1"
raw-socket = "0.0.2"
tokio = "1.21.0"

[dev-dependencies]
ibverbs=  { path = "../../rust-ibverbs/ibverbs" }
tracing-test = {version = "0.2.3", features = ["no-env-filter"] }